# ot-harkkatyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
housediary/: .coveragerc  .env  pyproject.toml  tasks.py
housediary/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
housediary/src/: config.py  database_connection.py  database_operations.py  index.py  initialize_database.py  test_initialize_database.py
housediary/src/entities/: task_manager.py  user.py
housediary/src/repositories/: tasks_repository.py  user_repository.py
housediary/src/services/: house_diary_service.py
housediary/src/tests/: house_diary_service_test.py
housediary/src/ui/: create_user_view.py  diary_first_ui.py  done_tasks_view.py  login_view.py  tasks_view.py  ui.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl_sekvenssikaavio.md  monopoli_kaavio.md
src/: build.py  database_connection.py  index.py  initialize_database.py  test_initialize_database.py
src/entities/: task_manager.py  user.py
src/repositories/: tasks_repository.py  user_repository.py
src/services/: house_diary_service.py
src/tests/: house_diary_service_test.py
src/ui/: diary_first_ui.py
